# qrcode_bot

./: .gitignore  README.md  config.py  pyproject.toml
bot/: main.py
